# simple-clock-sdl

./: .gitignore  CMakeLists.txt  README.md  shell.nix
hdr/: SimpleClock.hpp  SymbolDIY.hpp
src/: SimpleClock.cpp  SymbolDIY.cpp  main.cpp
